Fix all Javadoc warnings outside of koala. As an aside, all @link tags in package.html files need to be fully qualified, i.e. including the package name. Also, to link to methods in the same class, the notation is #method(type1, type2); the octothorpe (#) needs to be present. Likewise when linking to methods outside the class: packagename.outerclass.innerclass#method(type1, type2) would be the generic form; package name can supposedly be ommitted if it is imported in the file, but in practice this seems to fail, so qualify things outside the current file. This commit also replaces all occurences of new Boolean(), only one of these was explicit, but "return true" in methods that return Boolean seems to implicitly call the Boolean constructor, which is wasteful since there can be only one (I mean two). Also cleaned up all usages of != and == testing for String equality, and replaced the 50+ lines of individual copy statements in build.xml with a single copy statement matching *.jpg when copying the quickstart docs.
git-svn-id: file:///tmp/test-svn/trunk@3024 fe72c1cf-3628-48e9-8b72-1c46755d3cff